# succinct_sudoku_backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  Procfile  README-RAILWAY.md  README.md  build.rs  build.sh  docker-compose.yml  nixpacks.toml  railway.toml
.cargo/: config.toml
assets/: sp1_prover
sp1_prover/: Cargo.toml
sp1_prover/src/: main.rs
src/: lib.rs  main.rs  sp1_prover.rs
