[package]
name = "sudoku_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["full"] }
tower = "0.4"
sha256 = "1.4.0"
uuid = { version = "1.6", features = ["v4"] }
futures = "0.3"

# Loglama kütüphaneleri
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"

# SP1 bağımlılıkları
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "342422d9" }

[features]
default = []
no_elf = []

[workspace]
members = ["sp1_prover"]

[profile.dev]
incremental = true
debug = 0

[profile.release]
incremental = true
debug = 0
codegen-units = 16
opt-level = "z"
lto = "thin"
strip = true 